core/authentik/overlays/in-cluster/all.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    backstage.io/kubernetes-id: authentik
    goldilocks.fairwinds.com/enabled: "true"
  name: authentik
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: forward_auth_outpost
    app.kubernetes.io/managed-by: goauthentik.io
    app.kubernetes.io/name: authentik-proxy
    app.kubernetes.io/version: 2024.4.2
    backstage.io/kubernetes-id: authentik
  name: authentik-outpost
  namespace: authentik
spec:
  ports:
  - name: http
    port: 9000
    protocol: TCP
    targetPort: http
  - name: https
    port: 9443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/instance: forward_auth_outpost
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: authentik
    app.kubernetes.io/part-of: authentik
    app.kubernetes.io/version: 2024.4.2
    backstage.io/kubernetes-id: authentik
    helm.sh/chart: authentik-2024.4.2
  name: authentik-server
  namespace: authentik
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9000
  - name: https
    port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/name: authentik
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server-metrics
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: authentik
    app.kubernetes.io/part-of: authentik
    app.kubernetes.io/version: 2024.4.2
    backstage.io/kubernetes-id: authentik
    helm.sh/chart: authentik-2024.4.2
  name: authentik-server-metrics
  namespace: authentik
spec:
  ports:
  - name: metrics
    port: 9300
    protocol: TCP
    targetPort: metrics
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/name: authentik
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: ldap_outpost
    app.kubernetes.io/managed-by: goauthentik.io
    app.kubernetes.io/name: authentik-proxy
    app.kubernetes.io/version: 2024.4.2
    backstage.io/kubernetes-id: authentik
  name: ldap-authentik-outpost
  namespace: authentik
spec:
  ports:
  - name: ldaps
    port: 636
    protocol: TCP
    targetPort: ldaps
  - name: ldap
    port: 389
    protocol: TCP
    targetPort: ldap
  selector:
    app.kubernetes.io/instance: ldap_outpost
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: forward_auth_outpost
    app.kubernetes.io/managed-by: goauthentik.io
    app.kubernetes.io/version: 2024.4.2
    backstage.io/kubernetes-id: authentik
  name: authentik-outpost
  namespace: authentik
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: forward_auth_outpost
      app.kubernetes.io/managed-by: goauthentik.io
      app.kubernetes.io/name: authentik-proxy
      app.kubernetes.io/version: 2024.4.2
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: forward_auth_outpost
        app.kubernetes.io/managed-by: goauthentik.io
        app.kubernetes.io/name: authentik-proxy
        app.kubernetes.io/version: 2024.4.2
    spec:
      containers:
      - env:
        - name: AUTHENTIK_HOST
          valueFrom:
            secretKeyRef:
              key: authentik_host
              name: authentik-outpost-api
        - name: AUTHENTIK_TOKEN
          valueFrom:
            secretKeyRef:
              key: token
              name: authentik-outpost-api
        - name: AUTHENTIK_INSECURE
          valueFrom:
            secretKeyRef:
              key: authentik_host_insecure
              name: authentik-outpost-api
        image: ghcr.io/goauthentik/proxy
        name: proxy
        ports:
        - containerPort: 9000
          name: http
          protocol: TCP
        - containerPort: 9443
          name: https
          protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: authentik
    app.kubernetes.io/part-of: authentik
    app.kubernetes.io/version: 2024.4.2
    backstage.io/kubernetes-id: authentik
    helm.sh/chart: authentik-2024.4.2
  name: authentik-server
  namespace: authentik
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/instance: authentik
      app.kubernetes.io/name: authentik
  template:
    metadata:
      annotations:
        checksum/secret: 8777b193801656af513ddc3e47f7f72f731d6073a41010d80928d47bbe14a3ef
      labels:
        app.kubernetes.io/component: server
        app.kubernetes.io/instance: authentik
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: authentik
        app.kubernetes.io/part-of: authentik
        app.kubernetes.io/version: 2024.4.2
        helm.sh/chart: authentik-2024.4.2
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/component: server
                  app.kubernetes.io/instance: authentik
                  app.kubernetes.io/name: authentik
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - args:
        - server
        image: ghcr.io/goauthentik/server:2024.4.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /-/health/live/
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: server
        ports:
        - containerPort: 9000
          name: http
          protocol: TCP
        - containerPort: 9443
          name: https
          protocol: TCP
        - containerPort: 9300
          name: metrics
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /-/health/ready/
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        startupProbe:
          failureThreshold: 60
          httpGet:
            path: /-/health/live/
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /postgres-creds
          name: postgres-creds
          readOnly: true
        - mountPath: /redis-creds
          name: redis-creds
          readOnly: true
        - mountPath: /authentik-secret
          name: secret-key
          readOnly: true
        - mountPath: /email
          name: email-creds
          readOnly: true
      enableServiceLinks: true
      terminationGracePeriodSeconds: 30
      volumes:
      - name: postgres-creds
        secret:
          secretName: authentik-postgres-credentials
      - name: redis-creds
        secret:
          secretName: authentik-redis-credentials
      - name: secret-key
        secret:
          secretName: authentik-secret-key
      - name: email-creds
        secret:
          secretName: authentik-email-credentials
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: worker
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: authentik
    app.kubernetes.io/part-of: authentik
    app.kubernetes.io/version: 2024.4.2
    backstage.io/kubernetes-id: authentik
    helm.sh/chart: authentik-2024.4.2
  name: authentik-worker
  namespace: authentik
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: worker
      app.kubernetes.io/instance: authentik
      app.kubernetes.io/name: authentik
  template:
    metadata:
      annotations:
        checksum/secret: 8777b193801656af513ddc3e47f7f72f731d6073a41010d80928d47bbe14a3ef
      labels:
        app.kubernetes.io/component: worker
        app.kubernetes.io/instance: authentik
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: authentik
        app.kubernetes.io/part-of: authentik
        app.kubernetes.io/version: 2024.4.2
        helm.sh/chart: authentik-2024.4.2
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/component: worker
                  app.kubernetes.io/instance: authentik
                  app.kubernetes.io/name: authentik
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - args:
        - worker
        env: null
        image: ghcr.io/goauthentik/server:2024.4.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - ak
            - healthcheck
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: worker
        readinessProbe:
          exec:
            command:
            - ak
            - healthcheck
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        startupProbe:
          exec:
            command:
            - ak
            - healthcheck
          failureThreshold: 60
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /postgres-creds
          name: postgres-creds
          readOnly: true
        - mountPath: /redis-creds
          name: redis-creds
          readOnly: true
        - mountPath: /authentik-secret
          name: secret-key
          readOnly: true
        - mountPath: /email
          name: email-creds
          readOnly: true
      enableServiceLinks: true
      serviceAccountName: authentik
      terminationGracePeriodSeconds: 30
      volumes:
      - name: postgres-creds
        secret:
          secretName: authentik-postgres-credentials
      - name: redis-creds
        secret:
          secretName: authentik-redis-credentials
      - name: secret-key
        secret:
          secretName: authentik-secret-key
      - name: email-creds
        secret:
          secretName: authentik-email-credentials
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: ldap_outpost
    app.kubernetes.io/managed-by: goauthentik.io
    app.kubernetes.io/version: 2024.4.2
    backstage.io/kubernetes-id: authentik
  name: ldap-authentik-outpost
  namespace: authentik
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: ldap_outpost
      app.kubernetes.io/managed-by: goauthentik.io
      app.kubernetes.io/name: authentik-proxy
      app.kubernetes.io/version: 2024.4.2
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: ldap_outpost
        app.kubernetes.io/managed-by: goauthentik.io
        app.kubernetes.io/name: authentik-proxy
        app.kubernetes.io/version: 2024.4.2
    spec:
      containers:
      - env:
        - name: AUTHENTIK_HOST
          valueFrom:
            secretKeyRef:
              key: authentik_host
              name: ldap-authentik-outpost-api
        - name: AUTHENTIK_TOKEN
          valueFrom:
            secretKeyRef:
              key: token
              name: ldap-authentik-outpost-api
        - name: AUTHENTIK_INSECURE
          valueFrom:
            secretKeyRef:
              key: authentik_host_insecure
              name: ldap-authentik-outpost-api
        - name: AUTHENTIK_HOST_BROWSER
          valueFrom:
            secretKeyRef:
              key: authentik_host_browser
              name: ldap-authentik-outpost-api
        image: ghcr.io/goauthentik/ldap
        name: ldap_outpost
        ports:
        - containerPort: 6636
          name: ldaps
          protocol: TCP
        - containerPort: 3389
          name: ldap
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
  labels:
    app.kubernetes.io/instance: forward_auth_outpost
    app.kubernetes.io/managed-by: goauthentik.io
    app.kubernetes.io/name: authentik-proxy
    app.kubernetes.io/version: 2024.4.2
    backstage.io/kubernetes-id: authentik
  name: authentik-outpost
  namespace: authentik
spec:
  ingressClassName: nginx
  rules:
  - host: outpost.k8s.integratn.tech
    http:
      paths:
      - backend:
          service:
            name: authentik-outpost
            port:
              name: http
        path: /outpost.goauthentik.io
        pathType: Prefix
  tls:
  - hosts:
    - outpost.k8s.integratn.tech
    secretName: outpost-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: authentik
    app.kubernetes.io/part-of: authentik
    app.kubernetes.io/version: 2024.4.2
    backstage.io/kubernetes-id: authentik
    helm.sh/chart: authentik-2024.4.2
  name: authentik-server
  namespace: authentik
spec:
  ingressClassName: nginx
  rules:
  - host: auth.k8s.integratn.tech
    http:
      paths:
      - backend:
          service:
            name: authentik-server
            port:
              number: 9000
        path: /outpost.goauthentik.io
        pathType: Prefix
      - backend:
          service:
            name: authentik-server
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - auth.k8s.integratn.tech
    secretName: authentik-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
  labels:
    app.kubernetes.io/instance: ldap_outpost
    app.kubernetes.io/managed-by: goauthentik.io
    app.kubernetes.io/name: authentik-proxy
    app.kubernetes.io/version: 2024.4.2
    backstage.io/kubernetes-id: authentik
  name: ldap-authentik-outpost
  namespace: authentik
spec:
  ingressClassName: nginx
  rules:
  - host: ldap-outpost.k8s.integratn.tech
    http:
      paths:
      - backend:
          service:
            name: ldap-authentik-outpost
            port:
              name: ldaps
        path: /outpost.goauthentik.io
        pathType: Prefix
  tls:
  - hosts:
    - ldap-outpost.k8s.integratn.tech
    secretName: ldap-outpost-tls
