core/authentik/overlays/in-cluster/ldap-outpost.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: ldap_outpost
    app.kubernetes.io/managed-by: goauthentik.io
    app.kubernetes.io/name: authentik-proxy
    app.kubernetes.io/version: 2024.4.2
    metallb.universe.tf/address-pool: default
  name: ldap-authentik-outpost
spec:
  ports:
    - name: ldaps
      port: 636
      protocol: TCP
      targetPort: ldaps
    - name: ldap
      port: 389
      protocol: TCP
      targetPort: ldap
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: ldap_outpost
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: ldap_outpost
    app.kubernetes.io/managed-by: goauthentik.io
    app.kubernetes.io/version: 2024.4.2
  name: ldap-authentik-outpost
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: ldap_outpost
      app.kubernetes.io/managed-by: goauthentik.io
      app.kubernetes.io/name: authentik-proxy
      app.kubernetes.io/version: 2024.4.2
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: ldap_outpost
        app.kubernetes.io/managed-by: goauthentik.io
        app.kubernetes.io/name: authentik-proxy
        app.kubernetes.io/version: 2024.4.2
    spec:
      containers:
        - env:
            - name: AUTHENTIK_HOST
              valueFrom:
                secretKeyRef:
                  key: authentik_host
                  name: ldap-authentik-outpost-api
            - name: AUTHENTIK_TOKEN
              valueFrom:
                secretKeyRef:
                  key: token
                  name: ldap-authentik-outpost-api
            - name: AUTHENTIK_INSECURE
              valueFrom:
                secretKeyRef:
                  key: authentik_host_insecure
                  name: ldap-authentik-outpost-api
            - name: AUTHENTIK_HOST_BROWSER
              valueFrom:
                secretKeyRef:
                  key: authentik_host_browser
                  name: ldap-authentik-outpost-api
          image: ghcr.io/goauthentik/ldap
          name: ldap-outpost
          ports:
            - containerPort: 6636
              name: ldaps
              protocol: TCP
            - containerPort: 3389
              name: ldap
              protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/instance: ldap_outpost
    app.kubernetes.io/managed-by: goauthentik.io
    app.kubernetes.io/name: authentik-proxy
    app.kubernetes.io/version: 2024.4.2
  name: ldap-authentik-outpost
spec:
  ingressClassName: "nginx"
  rules:
    - host: ldap-outpost.k8s.integratn.tech
      http:
        paths:
          - backend:
              service:
                name: ldap-authentik-outpost
                port:
                  name: ldaps
            path: /outpost.goauthentik.io
            pathType: Prefix
  tls:
    - hosts:
        - ldap-outpost.k8s.integratn.tech
      secretName: ldap-outpost-tls
